--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,9 @@
   <link href="css/index.css" rel="stylesheet" />
   <title>Where to Eat</title>
 </head>
+
 <body>
-<!-- <body onload="checkSecure();"> -->
+  <!-- <body onload="checkSecure();"> -->
   <nav>
     <a onclick="openNav()">&#9776;</a>
     <span>Where to eat</span>
@@ -18,70 +19,82 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <h1>Settings</h1>
     <!-- Begin Form -->
-      <!-- Latitude -->
-      <label for="lat">Latitude: </label>
-      <input id="lat" type="text" name="Latitude" placeholder="">
-      <!-- Longitude -->
-      <label for="lng">Longitude: </label>
-      <input id="lng" type="text" name="Longitude" placeholder="">
-      <!-- Travel Mode -->
-      <label for="travel">Travel mode:</label>
-      <select id="travelMode">
-        <option value="" selected disabled hidden>Select travel mode</option>
-        <option value="driving">Driving</option>
-        <option value="walking">Walking</option>
-        <option value="bycicling">Bycicling</option>
-        <option value="transit">Transit</option>
-      </select>
-      <!-- Results Count -->
-      <label for="results">Results count: </label>
-      <br/>
-      <input id="results" type="text" name="Results" placeholder="">
-      <!-- Maximum miles -->
-      <label for="miles">Maximum miles radius: </label>
-      <br/>
-      <input id="miles" type="text" name="Miles" placeholder="">
-      <!-- Sort -->
-      <label for="sort">Sort by: </label>
-      <br/>
-      <select id="sort">
-        <option value="" selected disabled hidden>Selected sort</option>
-        <option value="cost">Cost</option>
-        <option value="rating">Rating</option>
-        <option value="real_distance">Distance</option>
-      </select>
-      <!-- Order -->
-      <label for="results">Order by: </label>
-      <select id="order">
-        <option value="" selected disabled hidden>Select order</option>
-        <option value="asc">Ascending</option>
-        <option value="desc">Descending</option>
-      </select>
-      <!-- End of Form -->
-      <button class="btn" onclick="applySettings();"> Apply Settings</button>
+    <!-- Latitude -->
+    <label for="lat">Latitude: </label>
+    <input id="lat" type="text" name="Latitude" placeholder="">
+    <!-- Longitude -->
+    <label for="lng">Longitude: </label>
+    <input id="lng" type="text" name="Longitude" placeholder="">
+    <!-- Travel Mode -->
+    <label for="travel">Travel mode:</label>
+    <select id="travelMode">
+      <option value="" selected disabled hidden>Select travel mode</option>
+      <option value="driving">Driving</option>
+      <option value="walking">Walking</option>
+      <option value="bycicling">Bycicling</option>
+      <option value="transit">Transit</option>
+    </select>
+    <!-- Results Count -->
+    <label for="results">Results count: </label>
+    <br/>
+    <input id="results" type="text" name="Results" placeholder="">
+    <!-- Maximum miles -->
+    <label for="miles">Maximum miles radius: </label>
+    <br/>
+    <input id="miles" type="text" name="Miles" placeholder="">
+    <!-- Sort -->
+    <label for="sort">Sort by:</label>
+    <br/>
+    <select id="sort">
+      <option value="" selected disabled hidden>Selected sort</option>
+      <option value="cost">Cost</option>
+      <option value="rating">Rating</option>
+      <option value="real_distance">Distance</option>
+    </select>
+    <!-- Order -->
+    <label for="results">Order by:</label>
+    <select id="order">
+      <option value="" selected disabled hidden>Select order</option>
+      <option value="asc">Ascending</option>
+      <option value="desc">Descending</option>
+    </select>
+    <!-- End of Form -->
+    <button class="btn" onclick="applySettings();"> Apply Settings</button>
   </div>
-  <div id="queries">
 
-    <div style="margin-bottom:1em">
-      <label for="categories">Filter by categories</label>
-      <select id="categories" name="category">
-        <option></option>
+  <div id="buttons">
+      <button class="btn" onClick="requestCityInfo();">Foodie Index</button>
+  </div>
+
+  <div id="queries">
+    <div class="boxes">
+    <label for="categories">Filter by categories</label>
+    <select id="categories" name="category">
+    </select>
+    </div>
+    <div class="boxes">
+      <label for="cuisines">Filter by cuisines</label>
+      <select id="cuisines" name="cuisines[]" multiple="multiple">
       </select>
     </div>
-    <label for="cuisines">Filter by cuisines</label>
-    <select id="cuisines" name="cuisines[]" multiple="multiple">
-    </select>
     <!-- <button onclick="saveCuisines();">Apply</button> -->
-    <div style="margin-top:1em">
+
+    
+    
       <label for="search">Filter by search query</label>
       <input id="search" type="text" name="Search" placeholder="Enter your search query">
       <!-- <button onclick="saveSearch();">Apply</button> -->
-    </div>
     <button class="btn" onclick="applyAll();">
       <span>Apply any!</span>
     </button>
 
   </div>
+
+  <div id="cityInfo">
+
+  </div>
+
+
   <div id="map-canvas">
     <h3>Loading.... Please wait...</h3>
   </div>
