--- a/www/index.html
+++ b/www/index.html
@@ -59,31 +59,44 @@
       <option value="desc">Descending</option>
     </select>
     <!-- End of Form -->
-    <button class="btn" onclick="applySettings();"> Apply Settings</button>
+    <button class="btn white" onclick="applySettings();"> Apply Settings</button>
   </div>
 
   <div id="buttons">
-      <button class="btn" onClick="requestCityInfo();">Foodie Index</button>
+    <div class="imgcol">
+      <img src="img/cityInfoIcon.png" onClick="request('cityInfo');">
+    </div>
+    <div class="imgcol">
+      <img src="img/searchIcon.png" onClick="request('cityInfo');">
+    </div>
+
+    <div class="imgcol">
+      <img src="img/settingsIcon.png" onClick="request('cityInfo');">
+    </div>
+
   </div>
 
   <div id="queries">
     <div class="boxes">
-    <label for="categories">Filter by categories</label>
-    <select id="categories" name="category">
-    </select>
+      <label for="categories">Filter by categories</label>
+      <select id="categories" name="category">
+        <option value="" disabled selected hidden>Please choose a category</option>
+
+      </select>
     </div>
     <div class="boxes">
       <label for="cuisines">Filter by cuisines</label>
-      <select id="cuisines" name="cuisines[]" multiple="multiple">
+      <select id="cuisines" name="cuisines">
+        <option value="" disabled selected hidden>Please choose a cuisine</option>
       </select>
     </div>
     <!-- <button onclick="saveCuisines();">Apply</button> -->
 
-    
-    
-      <label for="search">Filter by search query</label>
-      <input id="search" type="text" name="Search" placeholder="Enter your search query">
-      <!-- <button onclick="saveSearch();">Apply</button> -->
+
+
+    <label for="search">Filter by search query</label>
+    <input id="search" type="text" name="Search" placeholder="Enter your search query">
+    <!-- <button onclick="saveSearch();">Apply</button> -->
     <button class="btn" onclick="applyAll();">
       <span>Apply any!</span>
     </button>
@@ -103,12 +116,8 @@
   </div>
 
   <script src="cordova.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN9Dwitb2cjEuouUSW2As_Ot5vrzLmhY0&libraries=geometry"></script>
   <script src="js/index.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-
 </body>
 
 </html>
